--- a/A propos.html
+++ b/A propos.html
@@ -9,15 +9,82 @@
 <body>
     <header>
      
-    <section class="content">
-        <h2>À propos de moi</h2>
-        <p>Je suis <strong>Horus</strong>, trader indépendant passionné par la cryptomonnaie, les réseaux informatiques et la technologie blockchain.</p>
-        <p>Certifié en réseaux informatiques (Cisco) et actif dans le domaine des crypto-actifs depuis plusieurs années, j’ai décidé de créer cette plateforme pour partager mes connaissances, mes analyses et aider la communauté à mieux comprendre la révolution financière numérique.</p>
-        <p>Ce site a pour mission de rendre la crypto *accessible, claire et sécurisée* pour tous, notamment en Afrique francophone.   
+    <section class="michel">
+    <div class="blue">   
+        <h1>C'est quoi la cryptomonnaie</h1>
+        <p>
+            la cryptommonaie est une monnaie numérique qui fonction sans banque ni gouvenemental<br>
+        <br>
+Une cryptomonnaie, c’est de l’argent 100% numérique.<br>
+Elle permet de faire des achats, des virements, ou de garder de la valeur, 
+comme une monnaie normale, mais tout se passe en ligne.<br>
+<br>
+Avec la crypto, tu n’as pas besoin de banque ou d’intermédiaire.<br>
+Quand tu envoies ou reçois de l’argent, tout est enregistré dans un registre sécurisé appelé Blockchain.<br>
+       <br>
+Tu gardes tes cryptomonnaies dans un portefeuille numérique, un peu comme une appli sur ton téléphone.
+C’est simple et rapide à utiliser.
         </p>
+    </div>
 
-    
-    </section>
+    <div class="blue">
+        <h2>C'est quoi la BLOCKCHAIN</h2>
+        <p>La BLOCKCHAIN est un régistre numérique sécuriser,
+            partagé entre tous les utilisateurs,<br> qui permet de suivre,
+             stocker et valider des données ou des transactions 
+            sans intermédiare.<br>
+                  <br>
+            En resumé 
+            la BLOCKCHAIN est comme un grand cahier public numérique <br> ou toutes les transactions sont écrites
+            ligne par ligne,<br> et que personne ne peut effacer ou modifier ce qui est déjà écrit . 
+        </p>
+        <img src="fonctionnement.jpg" alt="img1">
+    </div>
+
+    <div class="blue">
+        <h3>Comment fonctionnement la BLOCKCHAIN</h3>
+        <p>
+            *Les transations sont regroupées dans un "Bloc";<br>
+            <br>
+            *Ce Bloc est vérifier par des ordinateurs (appellés Noeuds ou Mineur);<br>
+            <br>
+            *Une fois validés, il est ajouté à la chaîne des Bloc précédents;<br>
+            <br>
+            *La chaîne nouveau Bloc est lié au précédents, ce qui rend la chaîne inassable
+            et infalsifiable;<br>
+        </p>
+        <img src="blochain.jpg" alt="img2">
+    </div>
+
+    <div class="blue">
+        <h3>A quoi sert la blockchain</h3>
+        <p>
+            *Sécuriser les cryptommonaie comme le bitcoin qui est une crypto mére;<br>
+                   <br>
+            *Eviter la fraude (on ne peut pas tricher avec une transaction déjà enregistre);<br>
+            <br>
+            *Créer des contrats intelligents (Smarts contrats) qui s'excutent automatiquement ;<br>
+            <br>
+            *Suivre des produits(traçailité dans l'agroalimentaires , les Medicaments.....etc)<br>
+            <br>
+        </p>
+    </div>
+
+    <div class="blue">
+        <h3>Exemple des quelques cryptomonnaie</h3>
+        <p>
+            * Bitcoin (BTC): appellé autrement la crypto Mére est une crypto crééé en 2009 
+                             par un invidu ou groupes<br> d'invidus  au nom de "SATOSHI NAKAMOTO"
+                            est un pseudonyme, <br>l'indentité du créateur du Bitcoin reste un mystére(?);<br>
+                            <br>
+            * Ethereum (ETH): trés utilisée pour les contrats intelligents(Smart contrat)
+                               <br>1ETH = 1$;
+                               <br>
+            *BNB, Salana(SOL), Ripple(XRP) et d'autres cryptos populaires.<br>
+        </p>
+    </div>
+
+        </section>
     </header>
 
     <footer>
