--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-          <section class="content2">
+          <section class="luzolo">
         <h2>Me contacter</h2>
         <p>Pour toute question, collaboration ou demande de formation, n’hésitez pas à me contacter :</p>
 
@@ -18,19 +18,6 @@
             <li><strong>WhatsApp :</strong> +243 892 170 558</li>
         </ul>
 
-        <p>Ou remplissez ce formulaire (non-fonctionnel dans ce modèle local) :</p>
-        <form>
-            <label for="nom">Nom :</label><br>
-            <input type="text" id="nom" name="nom"><br><br>
-
-            <label for="email">Email :</label><br>
-            <input type="email" id="email" name="email"><br><br>
-
-            <label for="message">Message :</label><br>
-            <textarea id="message" name="message" rows="5"></textarea><br><br>
-
-            <input type="submit" value="Envoyer">
-        </form>
 
     </section>
     </header>
