--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="apropos.html">À propos</a></li>
+                <li><a href="A propos.html">À propos</a></li>
                 <li><a href="Contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -21,22 +21,20 @@
     <section class="hero">
         <h2>Explorez l’univers de la cryptomonnaie</h2>
         <p>Actualités, analyses, formations et plus encore pour maîtriser la finance numérique.</p>
-        <a href="#" class="btn">Commencer</a>
-    </section>
-
-    <section class="features">
-        <div class="feature">
+    
+        <div>
             <h3>📊 Analyses de marché</h3>
             <p>Comprenez les tendances du marché crypto en temps réel.</p>
         </div>
-        <div class="feature">
+        <div>
             <h3>🎓 Formations blockchain</h3>
             <p>Guides simples pour débutants et experts.</p>
         </div>
-        <div class="feature">
+        <div>
             <h3>🔒 Sécurité & wallets</h3>
             <p>Apprenez à protéger vos crypto-actifs efficacement.</p>
         </div>
+         <a href="https://t.me/+EFw9a9bBkukxYTk0" target="_blank" class="btn">Rejoins-moi</a>
     </section>
 
     <footer>
