--- a/apropos.html
+++ b/apropos.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="A propos.html">A propos</a></li>
+                <li><a href="A propos.html">apropos</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
