--- a/A propos.html
+++ b/A propos.html
@@ -38,7 +38,7 @@ C’est simple et rapide à utiliser.
             la BLOCKCHAIN est comme un grand cahier public numérique <br> ou toutes les transactions sont écrites
             ligne par ligne,<br> et que personne ne peut effacer ou modifier ce qui est déjà écrit . 
         </p>
-        <img src="fonctionnement.jpg" alt="img1">
+        <img src="fonctionnement.jpg" alt="img">
     </div>
 
     <div class="blue">
