--- a/Contact.html
+++ b/Contact.html
@@ -8,6 +8,16 @@
 </head>
 <body>
     <header>
+        
+        <h1>Horus Crypto & Finance</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="A propos.html">À propos</a></li>
+                <li><a href="Contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    
           <section class="luzolo">
         <h2>Me contacter</h2>
         <p>Pour toute question, collaboration ou demande de formation, n’hésitez pas à me contacter :</p>
