--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Horus Crypto & Finance</title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="/projet/tyla/Style.css">
 </head>
 <body>
     <header>
