--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
     <link rel="stylesheet" href="/projet/tyla/Style.css">
 </head>
 <body>
-    <header>
-        <h1>Horus Crypto & Finance</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="A propos.html">À propos</a></li>
-                <li><a href="Contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+ <header>
+  <h1>Horus Crypto & Finance</h1>
+
+  <input type="checkbox" id="menu-toggle">
+  <label for="menu-toggle" class="menu-icon">&#9776;</label>
+
+  <nav class="menu">
+    <ul>
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="A propos.html">À propos</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+</header>
 
     <section class="hero">
         <h2>Explorez l’univers de la cryptomonnaie</h2>
@@ -36,7 +40,7 @@
         </div>
          <a href="https://t.me/+EFw9a9bBkukxYTk0" target="_blank" class="btn">Rejoins-moi</a>
     </section>
-
+         
     <footer>
         <p>&copy; 2025 Horus Crypto & Finance. Tous droits réservés.</p>
     </footer>
