--- a/A propos.html
+++ b/A propos.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <header>
+           <h1>Horus Crypto & Finance</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="A propos.html"> A propos</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
      
+    </header>
     <section class="michel">
     <div class="blue">   
         <h1>C'est quoi la cryptomonnaie</h1>
